--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,7 @@ figcaption {
   position: absolute;
   top: 20px;
   left: 130px;
+  left: 13%;
   font-family: 'Playfair Display', serif;
   font-size: xx-large;
 }
