--- a/styles.css
+++ b/styles.css
@@ -103,19 +103,17 @@
 
 
 .food-menu {
+  width: 70%;
   height: 30%;
   position: absolute;
   bottom: 120px;
   left: 25%;
   overflow: hidden;
-  display: grid;
-  grid-template-columns: auto auto auto auto auto;
-  grid-gap: 10px;
-  justify-content: space-evenly;
+  display: flex;
 }
 .item-img {
   height: 90%;
-  width: 80%;
+  width: 18%;
   border-radius: 25px;
   background-color: rgb(246, 253, 222);
   box-shadow: 15px 15px 15px rgb(233, 229, 229);
